--- a/index.html
+++ b/index.html
@@ -31,46 +31,46 @@
           <li><a class="hover-link">Who we are?</a>
             <div class="dropdown-menu">
               <ul>
-                <li><a href="https://balrakshabharat.org/overview/"></a>Overviwe</li>
-                <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/"></a>Mission & Vision</li>
-                <li><a href="#"></a>Our team</li>
-                <li><a href="#"></a>Child Rights</li>
-                <li><a href="#"></a>Financial</li>
-                <li><a href="#"></a>Raksha Journal</li>
-                <li><a href="#"></a>Latest Blog</li>
-                <li><a href="#"></a>Press Coverage</li>
-                <li><a href="#"></a>Evidence & Use</li>
-                <li><a href="#"></a>Child Participation</li>
-                <li><a href="#"></a>Quality & Learning</li>
+                <li><a href="https://balrakshabharat.org/overview/">Overviwe</a></li>
+                <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/">Mission & Vision</a></li>
+                <li><a href="#">Our team</a></li>
+                <li><a href="#">Child Rights</a></li>
+                <li><a href="#">Financial</a></li>
+                <li><a href="#">Raksha Journal</a></li>
+                <li><a href="#">Latest Blog</a></li>
+                <li><a href="#">Press Coverage</a></li>
+                <li><a href="#">Evidence & Use</a></li>
+                <li><a href="#">Child Participation</a></li>
+                <li><a href="#">Quality & Learning</a></li>
               </ul>
             </div>
           </li>
           <li><a class="hover-link">What we do?</a>
             <div class="dropdown-menu">
               <ul>
-                <li><a href="#"></a>Education</li>
-                <li><a href="#"></a>Health & Nutrition</li>
-                <li><a href="#"></a>Our Programmes</li>
-                <li><a href="#"></a>Engagement with Government</li>
-                <li><a href="#"></a>Resilience</li>
-                <li><a href="#"></a>social Inclusion</li>
-                <li><a href="#"></a>Protection</li>
-                <li><a href="#"></a>Humanitarian</li>
-                <li><a href="#"></a>Child Champions</li>
+                <li><a href="#">Education</a></li>
+                <li><a href="#">Health & Nutrition</a></li>
+                <li><a href="#">Our Programmes</a></li>
+                <li><a href="#">Engagement with Government</a></li>
+                <li><a href="#">Resilience</a></li>
+                <li><a href="#">social Inclusion</a></li>
+                <li><a href="#">Protection</a></li>
+                <li><a href="#">Humanitarian</a></li>
+                <li><a href="#">Child Champions</a></li>
               </ul>
             </div>
           </li>
           <li><a class="hover-link">Take Action</a>
             <div class="dropdown-menu">
               <ul>
-                <li><a href="#"></a>Donate</li>
-                <li><a href="volunteer.html"></a>Volunteer</li>
-                <li><a href="#"></a>FAQs</li>
-                <li><a href="#"></a>Legacy</li>
-                <li><a href="#"></a>Other Ways to Help</li>
-                <li><a href="#"></a>High Value Gifting</li>
-                <li><a href="#"></a>Contact Us</li>
-                <li><a href="#"></a>Carrers</li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="volunteer.html">Volunteer</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Legacy</a></li>
+                <li><a href="#">Other Ways to Help</a></li>
+                <li><a href="#">High Value Gifting</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Carrers</a></li>
               </ul>
             </div>
           </li>
@@ -81,7 +81,7 @@
         <button type="submit"><i class="fa fa-search cursor" aria-hidden="true"></i></button>
       </div>
       <div class="donate cursor" style="float: right;">
-        <a herf="./donate_panel.html"><img src="Photos\Donate-button-brb.png" alt="donateButton"></a>
+        <a href="./donate_panel.html"><img src="Photos\Donate-button-brb.png" alt="donateButton"></a>
       </div>
     </nav>
   </div>
