--- a/volunteer.html
+++ b/volunteer.html
@@ -27,47 +27,47 @@
                     <li><a class="hover-link">Who we are?</a>
                         <div class="dropdown-menu">
                             <ul>
-                                <li><a href="https://balrakshabharat.org/overview/"></a>Overviwe</li>
-                                <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/"></a>Mission &
-                                    Vision</li>
-                                <li><a href="#"></a>Our team</li>
-                                <li><a href="#"></a>Child Rights</li>
-                                <li><a href="#"></a>Financial</li>
-                                <li><a href="#"></a>Raksha Journal</li>
-                                <li><a href="#"></a>Latest Blog</li>
-                                <li><a href="#"></a>Press Coverage</li>
-                                <li><a href="#"></a>Evidence & Use</li>
-                                <li><a href="#"></a>Child Participation</li>
-                                <li><a href="#"></a>Quality & Learning</li>
+                                <li><a href="https://balrakshabharat.org/overview/">Overviwe</a></li>
+                                <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/">Mission &
+                                        Vision</a></li>
+                                <li><a href="#">Our team</a></li>
+                                <li><a href="#">Child Rights</a></li>
+                                <li><a href="#">Financial</a></li>
+                                <li><a href="#">Raksha Journal</a></li>
+                                <li><a href="#">Latest Blog</a></li>
+                                <li><a href="#">Press Coverage</a></li>
+                                <li><a href="#">Evidence & Use</a></li>
+                                <li><a href="#">Child Participation</a></li>
+                                <li><a href="#">Quality & Learning</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="hover-link">What we do?</a>
                         <div class="dropdown-menu">
                             <ul>
-                                <li><a href="#"></a>Education</li>
-                                <li><a href="#"></a>Health & Nutrition</li>
-                                <li><a href="#"></a>Our Programmes</li>
-                                <li><a href="#"></a>Engagement with Government</li>
-                                <li><a href="#"></a>Resilience</li>
-                                <li><a href="#"></a>social Inclusion</li>
-                                <li><a href="#"></a>Protection</li>
-                                <li><a href="#"></a>Humanitarian</li>
-                                <li><a href="#"></a>Child Champions</li>
+                                <li><a href="#">Education</a></li>
+                                <li><a href="#">Health & Nutrition</a></li>
+                                <li><a href="#">Our Programmes</a></li>
+                                <li><a href="#">Engagement with Government</a></li>
+                                <li><a href="#">Resilience</a></li>
+                                <li><a href="#">social Inclusion</a></li>
+                                <li><a href="#">Protection</a></li>
+                                <li><a href="#">Humanitarian</a></li>
+                                <li><a href="#">Child Champions</a></li>
                             </ul>
                         </div>
                     </li>
                     <li><a class="hover-link">Take Action</a>
                         <div class="dropdown-menu">
                             <ul>
-                                <li><a href="#"></a>Donate</li>
-                                <li><a href="./volunteer.html"></a>Volunteer</li>
-                                <li><a href="#"></a>FAQs</li>
-                                <li><a href="#"></a>Legacy</li>
-                                <li><a href="#"></a>Other Ways to Help</li>
-                                <li><a href="#"></a>High Value Gifting</li>
-                                <li><a href="#"></a>Contact Us</li>
-                                <li><a href="#"></a>Carrers</li>
+                                <li><a href="#">Donate</a></li>
+                                <li><a href="volunteer.html">Volunteer</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">Legacy</a></li>
+                                <li><a href="#">Other Ways to Help</a></li>
+                                <li><a href="#">High Value Gifting</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Carrers</a></li>
                             </ul>
                         </div>
                     </li>
@@ -111,23 +111,23 @@
         <div class="form-cont">
             <label class="name" for="name">Name <span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
             <div class="first-name" style="margin: 0px 0px 45px;">
-                <label for="first-name" >First</label>
+                <label for="first-name">First</label>
                 <input type="text" name="first name">
             </div>
             <div class="first-name" style="margin: 0px 0px 45px;">
-                <label for="last-name" >Last</label>
+                <label for="last-name">Last</label>
                 <input type="text" name="last name">
             </div>
             <div class="first-name" style="margin: 0px 0px 45px;">
-                <label for="email-name" >Email<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
+                <label for="email-name">Email<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
                 <input type="text" name="email">
             </div>
             <div class="first-name" style="margin: 0px 0px 45px;">
-                <label for="phone-number" >Phone<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
+                <label for="phone-number">Phone<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
                 <input type="number" name="phone number" placeholder="08123456789">
             </div>
             <div class="first-name" style="margin: 0px 0px 45px;">
-                <label for="city-name" >City<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
+                <label for="city-name">City<span style="color: #ee1c2e; font-weight:bolder;">*</span></label>
                 <input type="text" name="city">
             </div>
             <div class="interest" style="padding: 10px 0; display: flex;">
@@ -165,12 +165,14 @@
                 </select>
             </div>
             <div style="padding: 10px 0 0 0;">
-                <button type="submit" name="submit" class="sbmit" >SUBMIT</button>
+                <button type="submit" name="submit" class="sbmit">SUBMIT</button>
             </div>
         </div>
-        <p style="font-size: 20px; padding: 10px 0px; color: black;">For any query regarding volunteering opportunities, reach out to us <a href="mailto:volunteers@savethechildren.in" target="_blank" rel="noopener noreferre" style="text-decoration: none; color: #ee1c2e;"> volunteers@savethechildren.in</a> </p>
+        <p style="font-size: 20px; padding: 10px 0px; color: black;">For any query regarding volunteering opportunities,
+            reach out to us <a href="mailto:volunteers@savethechildren.in" target="_blank" rel="noopener noreferre"
+                style="text-decoration: none; color: #ee1c2e;"> volunteers@savethechildren.in</a> </p>
     </div>
-    <footer style="background-size: 150px; background: red;">
+    <footer style="background-size: 150px; background: rgb(222, 8, 8);">
         <div class="footer">
             <div class="column">
                 <img src="./Photos/logo-footer.webp">
@@ -199,45 +201,47 @@
             <div class="column">
                 <h4>Who We Are?</h4>
                 <ul class="menu">
-                    <li><a href="https://balrakshabharat.org/overview/"></a>Overviwe</li>
-                    <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/"></a>Mission & Vision</li>
-                    <li><a href="#"></a>Our team</li>
-                    <li><a href="#"></a>Child Rights</li>
-                    <li><a href="#"></a>Financial</li>
-                    <li><a href="#"></a>Raksha Journal</li>
-                    <li><a href="#"></a>Latest Blog</li>
-                    <li><a href="#"></a>Press Coverage</li>
-                    <li><a href="#"></a>Evidence & Use</li>
-                    <li><a href="#"></a>Child Participation</li>
-                    <li><a href="#"></a>Quality & Learning</li>
-                  </ul>
+                    <li><a href="https://balrakshabharat.org/overview/">Overviwe</a></li>
+                    <li><a href="https://balrakshabharat.org/about-us/mission-and-vision/">Mission &
+                            Vision</a></li>
+                    <li><a href="#">Our team</a></li>
+                    <li><a href="#">Child Rights</a></li>
+                    <li><a href="#">Financial</a></li>
+                    <li><a href="#">Raksha Journal</a></li>
+                    <li><a href="#">Latest Blog</a></li>
+                    <li><a href="#">Press Coverage</a></li>
+                    <li><a href="#">Evidence & Use</a></li>
+                    <li><a href="#">Child Participation</a></li>
+                    <li><a href="#">Quality & Learning</a></li>
+                </ul>
+                </ul>
             </div>
             <div class="column">
                 <h4>What we do?</h4>
                 <ul class="menu">
-                    <li><a href="#"></a>Education</li>
-                    <li><a href="#"></a>Health & Nutrition</li>
-                    <li><a href="#"></a>Our Programmes</li>
-                    <li><a href="#"></a>Engagement with Government</li>
-                    <li><a href="#"></a>Resilience</li>
-                    <li><a href="#"></a>social Inclusion</li>
-                    <li><a href="#"></a>Protection</li>
-                    <li><a href="#"></a>Humanitarian</li>
-                    <li><a href="#"></a>Child Champions</li>
-                  </ul>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Health & Nutrition</a></li>
+                    <li><a href="#">Our Programmes</a></li>
+                    <li><a href="#">Engagement with Government</a></li>
+                    <li><a href="#">Resilience</a></li>
+                    <li><a href="#">social Inclusion</a></li>
+                    <li><a href="#">Protection</a></li>
+                    <li><a href="#">Humanitarian</a></li>
+                    <li><a href="#">Child Champions</a></li>
+                </ul>
             </div>
             <div class="column">
                 <h4>Action Taken</h4>
                 <ul class="menu">
-                    <li><a href="#"></a>Donate</li>
-                    <li><a href="#"></a>Volunteer</li>
-                    <li><a href="#"></a>FAQs</li>
-                    <li><a href="#"></a>Legacy</li>
-                    <li><a href="#"></a>Other Ways to Help</li>
-                    <li><a href="#"></a>High Value Gifting</li>
-                    <li><a href="#"></a>Contact Us</li>
-                    <li><a href="#"></a>Carrers</li>
-                  </ul>
+                    <li><a href="#">Donate</a></li>
+                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Legacy</a></li>
+                    <li><a href="#">Other Ways to Help</a></li>
+                    <li><a href="#">High Value Gifting</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Carrers</a></li>
+                </ul>
             </div>
         </div>
     </footer>
